# 3-rd-semester-cpp-project

./: .gitignore  CMakeLists.txt  README.md
data/: settings.cfg
data/other/: windownames.list
data/parts/control/: cockpit1.shippart
data/parts/engines/: engine1.shippart
data/parts/reactors/: reactor1.shippart
data/parts/structural/: hull1.shippart  hull1halfleft.shippart  hull1halfright.shippart  hull1slope.shippart  hull1slopeleft.shippart  hull1sloperight.shippart  hull1sweepleft.shippart  hull1sweepleft2.shippart  hull1sweepright.shippart  hull1sweepright2.shippart
data/parts/weapons/: laserLeft.shippart  laserRight.shippart  reactor1.shippart
src/: main.cpp
src/classes/: aux.cpp  aux.hpp  editorPart.hpp  gameData.cpp  gameData.hpp  part.cpp  part.hpp  parts.hpp  ship.cpp  ship.hpp
src/classes/partTypes/: control.cpp  control.hpp  engine.cpp  engine.hpp  reactor.cpp  reactor.hpp  weapon.cpp  weapon.hpp
src/graphics/: graphics.cpp  graphics.hpp  graphicsLoop.hpp
src/graphics/classes/: button.cpp  button.hpp  graphicsLib.hpp
src/graphics/classes/complex/: scrollList.cpp  scrollList.hpp
src/graphics/classes/simple/: button.cpp  button.hpp  frame.cpp  frame.hpp  healthBar.cpp  healthBar.hpp  sliderButton.cpp  sliderButton.hpp  textBox.hpp  texturable.cpp  texturable.hpp
src/graphics/elements/: editorRender.cpp  editorRender.hpp  elements.hpp  gameOverRenderer.cpp  gameOverRenderer.hpp  gameplayRender.cpp  gameplayRender.hpp
src/logic/: handling.hpp  logicLoop.cpp  logicLoop.hpp  logicStructs.cpp  logicStructs.hpp
src/logic/handling/editor/: editorHandling.cpp  editorHandling.hpp  editorShip.cpp  editorShip.hpp  editorShipPart.cpp  editorShipPart.hpp
src/logic/handling/gameOver/: gameOverHandling.cpp  gameOverHandling.hpp
src/logic/handling/gameplay/: collision.cpp  collision.hpp  gameplayHandling.cpp  gameplayHandling.hpp  projectile.cpp  projectile.hpp
src/misc/: loading.cpp  loading.hpp  misc.cpp  misc.hpp  settings.cpp  settings.hpp  texturePacker.cpp  texturePacker.hpp
